--- a/Style.css
+++ b/Style.css
@@ -1,20 +1,5 @@
-header{
-    background-color: wheat;
-}
-
-footer{
-    text-align: center;
-    color: red;
-}
-
-.navigation{
-    padding: 0px;
-    margin: 0px;
-    color: black;
-    font-family: 'Times New Roman', Times, serif;
-}
-
-.list{
+/*HEAD*/
+ul{
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -28,11 +13,11 @@ footer{
     z-index: 9998;
 }
 
-.aba{
+li{
     float: left;
 }
 
-.aba a{
+li a{
     display: block;
     color: white;
     text-align: center;
@@ -40,7 +25,7 @@ footer{
     text-decoration: none;
 }
 
-.aba a:hover:not(.active){
+li a:hover:not(.active){
     background-color: #111;
     z-index: 9999;
 }
@@ -50,9 +35,199 @@ footer{
 }
 
 body{
-    font: normal 15pt Arial;
-    background-color: skyblue;
+    padding: 0;
+    margin: 0;
+    color: white;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+/*HEADER*/
+
+.header-wrapper{
+    height: 100vh;
+    word-wrap: 100%;
+    background: linear-gradient(-45deg, grey,black,grey,black);
+    background-size: 400% 400%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    animation: backgroundTransition 8s ease-in-out infinite;
+}
+
+img{
+    width: 100px;
+    height: 100px;
+}
+
+.img2{
+    width: 100%;
+    height: 100%;
+}
+
+h1{
+    text-transform: uppercase;
+    letter-spacing: 4px;
+}
+
+h2{
+    text-transform: uppercase;
+    letter-spacing: 4px;
+}
+
+.social-media{
+    margin-top: 1rem;
+    display: flex;
+}
+
+.social-media a{
+    text-decoration: none;
+    color: white;
+    font-size: 24px;
+    padding: 1rem 4rem;
+    border: 1px solid white;
+    min-width: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: .5s cubic-bezier(0.55, 0.025, 0.675, 0.97);
+}
+
+a:hover{
+    color: gray;
+    background-color: white;
+}
+
+@keyframes backgroundTransition{
+    0%{
+        background-position: 0% 80%;
+    }
+    50%{
+        background-position: 80% 100%;
+    }
+    100%{
+        background-position: 0% 90%;
+    }
+}
+
+/* Cards */
+
+.container{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin: 3rem 0;
+}
+
+.card-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 90%;
+}
+
+.card{
+    height: 300px;
+    width: 400px;
+    margin: 3rem 0 0;
+    background-image: url('');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    filter: grayscale(0.5);
+    color: white;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.card-text{
+    width: 40%;
+    font-family: 'Times New Roman', Times, serif;
+    letter-spacing: 1px;
     color: black;
-    margin-top: 80px;
-    padding: 0px;
+}
+
+.card-wrapper::before{
+    content: '';
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    display: block;
+    border: 1px solid white;
+    opacity: 0;
+    transition: 0.3s;
+}
+
+.card-wrapper p{
+    font-size: 0;
+    visibility: hidden;
+    opacity: 0;
+    font-weight: bold;
+    text-transform: uppercase;
+    transition: 0.3s;
+}
+
+.card:hover{
+    filter: unset;
+}
+
+.card:hover > .card-wrapper::before{
+    opacity: 1;
+    width: 350px;
+    height: 250px;
+}
+
+/*FOOTER*/
+
+.footer{
+    height: 100px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+}
+
+/*Responsivel*/
+
+@media (max-width: 800px) {
+    .social-media{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .container{
+        margin-top: 0;
+    }
+
+    .card-container{
+        flex-direction: column;
+    }
+
+    .container .card-container:nth-child(1),.container .card-container:nth-child(3){
+        flex-direction: column-reverse;
+    }
+
+    .card{
+        height: 250px;
+        width: 250px;
+    }
+
+    .card-text{
+        width: 90%;
+        margin-top: 2rem;
+        text-align: center;
+    }
+
+    .card:hover > .card-wrapper::before{
+        height: 190px;
+        width: 190px;
+    }
 }
