--- a/Style.css
+++ b/Style.css
@@ -46,7 +46,7 @@ body{
 .header-wrapper{
     height: 100vh;
     word-wrap: 100%;
-    background: linear-gradient(-45deg, rgb(41, 41, 117),rgb(35, 26, 87),rgb(26, 26, 104),rgb(5, 32, 82));
+    background: linear-gradient(-45deg, rgb(13, 13, 36),rgb(13, 7, 46),rgb(17, 17, 71),rgb(4, 29, 75));
     background-size: 400% 400%;
     display: flex;
     flex-direction: column;
@@ -64,7 +64,6 @@ body{
 img{
     width: 300px;
     height: 300px;
-    border-radius: 69%;
 }
 
 .img2{
@@ -80,6 +79,7 @@ h1{
 h2{
     text-transform: uppercase;
     letter-spacing: 4px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .social-media{
