--- a/Style.css
+++ b/Style.css
@@ -134,63 +134,97 @@ a:hover{
 
 .card-container{
     display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    flex-direction: row;
     width: 90%;
+    margin-top: 2rem;
+    background-color: blueviolet;
 }
 
-.card{
-    height: 300px;
-    width: 400px;
-    margin: 3rem 0 0;
-    background-image: url('');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    filter: grayscale(0.5);
-    color: white;
-    cursor: pointer;
-    transition: 0.3s;
+.img-intro{
+    width: 45%;
+    height: 45%;
+}
+
+.cardbox{
+    flex-direction: column;
+    margin-left: 2rem;
+    width: 65%;
+    height: 65%;
+}
+
+.card-tittle{
+    letter-spacing: 1px;
+    font-family: fantasy;
+    color: black;
+    font-size: 30px;
 }
 
 .card-text{
-    width: 40%;
     font-family: 'Times New Roman', Times, serif;
     letter-spacing: 1px;
     color: black;
+    font-size: 22px;
 }
 
-.card-wrapper::before{
-    content: '';
-    position: absolute;
-    height: 100px;
-    width: 100px;
-    display: block;
-    border: 1px solid white;
-    opacity: 0;
-    transition: 0.3s;
+.sp{
+    flex-direction: column;
 }
 
-.card-wrapper p{
-    font-size: 0;
-    visibility: hidden;
-    opacity: 0;
-    font-weight: bold;
-    text-transform: uppercase;
-    transition: 0.3s;
+.Card-tittle{
+    color: black;
+    font-size: 45px;
+    letter-spacing: 2px;
+    background-color: gray;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.card:hover{
-    filter: unset;
+.MiniCards{
+    flex-direction: row;
+    display: flex;
+    align-items: center;
+    width: auto;
+    height: auto;
+    margin: 10px;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
 }
 
-.card:hover > .card-wrapper::before{
-    opacity: 1;
-    width: 350px;
-    height: 250px;
+.card{
+    flex-direction: column;
+    display: flex;
+    scroll-snap-align: start;
+    margin: 10px;
+    min-width: 15%;
+    height: 100%;
+    background-color: rgb(248, 198, 198);
+}
+
+.cardimg{
+    width: 100%;
+    height: 200px;
+    border: 1px;
+    border-color: black;
+}
+
+.ProjectTittle{
+    font-size: 30px;
+    color: black;
+    text-align: center;
+    border: #111;
+}
+
+.projecttext{
+    color: black;
+    text-align: left;
+    font-size: 22px;
+    margin: 5px;
+}
+
+.projectbotton{
+    color: gray;
+    font-size: 15px;
+    text-align: right;
 }
 
 /*FOOTER*/
