--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,6 @@
+* {
+    /*outline: 1px solid red; */
+}
 /*HEAD*/
 ul{
     list-style-type: none;
@@ -138,7 +141,7 @@ a:hover{
     flex-direction: row;
     width: 90%;
     margin-top: 2rem;
-    background-color: blueviolet;
+    /*background-color: blueviolet; */
 }
 
 .img-intro{
@@ -197,7 +200,7 @@ a:hover{
     margin: 10px;
     min-width: 15%;
     height: 100%;
-    background-color: rgb(248, 198, 198);
+    background-color: rgb(218, 218, 218);
 }
 
 .cardimg{
@@ -212,19 +215,23 @@ a:hover{
     color: black;
     text-align: center;
     border: #111;
+    margin-top: 8px;
 }
 
 .projecttext{
     color: black;
     text-align: left;
     font-size: 22px;
-    margin: 5px;
+    margin: 15px;
 }
 
 .projectbotton{
     color: gray;
     font-size: 15px;
     text-align: right;
+    border-top: rgb(175, 175, 175) 2px solid;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 /*FOOTER*/
