--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ h2 {
     transition: .5s cubic-bezier(0.55, 0.025, 0.675, 0.97);
 }
 
-a:hover {
+.social-media a:hover {
     color: gray;
     background-color: white;
 }
@@ -181,6 +181,8 @@ a:hover {
     font-size: 45px;
     letter-spacing: 2px;
     background-color: gray;
+    text-align: center;
+    vertical-align: middle;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -346,6 +348,20 @@ a:hover {
     justify-content: space-between;
 }
 
+.card-botton-member .member-media{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    width: 40px;
+    margin: 0 10px 10px 0;
+    text-decoration: none;
+    border-radius: 50%;
+    color: white;
+    border: 1px solid white;
+    transition: all 0.5s ease;
+}
+
 /*FOOTER*/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
@@ -407,7 +423,7 @@ a:hover {
 }
 
 .footer-col ul li a:hover{
-    color: black;
+    color: white;
     padding-left: 10px;
 }
 
@@ -464,42 +480,4 @@ a:hover {
     border-radius: 3px;
     font-weight: bold;
     background-color: white;
-}
-
-/*Responsivel*/
-
-@media (max-width: 800px) {
-    .social-media {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .container {
-        margin-top: 0;
-    }
-
-    .card-container {
-        flex-direction: column;
-    }
-
-    .container .card-container:nth-child(1),
-    .container .card-container:nth-child(3) {
-        flex-direction: column-reverse;
-    }
-
-    .card {
-        height: 250px;
-        width: 250px;
-    }
-
-    .card-text {
-        width: 90%;
-        margin-top: 2rem;
-        text-align: center;
-    }
-
-    .card:hover>.card-wrapper::before {
-        height: 190px;
-        width: 190px;
-    }
 }
